--- a/Data101_(Chapter2).ipynb
+++ b/Data101_(Chapter2).ipynb
@@ -1788,7 +1788,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "venYcIXnJlmY",
-        "outputId": "2a691121-df6c-4014-c62c-7215e8bd01bc"
+        "outputId": "b8f6e21f-b677-4f92-e06f-784c5d82b381"
       },
       "source": [
         "for i in [1,2,3,4,5]:\n",
@@ -1796,16 +1796,21 @@
         "\n",
         "  print('x')"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "2\n",
+            "x\n",
             "3\n",
+            "x\n",
             "4\n",
+            "x\n",
             "5\n",
-            "6\n"
+            "x\n",
+            "6\n",
+            "x\n"
           ],
           "name": "stdout"
         }
@@ -1818,13 +1823,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uMSbaRuYMZFq",
-        "outputId": "2f72e5dc-bcc2-4e87-cdf7-ee5063055689"
+        "outputId": "b2a1df4d-7fc7-451a-e07a-0387e75c4436"
       },
       "source": [
         "for x in [1,2,3,4,5]:\n",
         "  print(f'ค่าตัวแปร x คือ {x} และ x+2={x+2}')"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1846,14 +1851,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1ZYapFGnM0nW",
-        "outputId": "5ce1b78f-150f-4347-ca0d-f432c306e11b"
+        "outputId": "8791557d-5f8e-4f16-f807-b338d39c9677"
       },
       "source": [
         "list5=[1,2,3,4,5]\n",
         "for x in list5:\n",
         "   print(f'ค่าตัวแปร x คือ {x} และ x+2={x+2}')"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1875,12 +1880,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VIvz9NXNNBDJ",
-        "outputId": "7819c536-6c50-4068-8d76-c6ef37398393"
+        "outputId": "4ad0865d-fe54-4fc1-a3e1-84f5a24cd074"
       },
       "source": [
         "list(range(10))"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1892,7 +1897,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 12
         }
       ]
     },
@@ -1903,13 +1908,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "shPNUWpJNTOB",
-        "outputId": "ded1863f-c1a7-4614-e4c5-0701a62d323a"
+        "outputId": "d8c3f695-de3a-4934-b119-8ba160de3154"
       },
       "source": [
         "for i in range(2,7):\n",
         "  print(i)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1931,13 +1936,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2qg9SxrDN2M8",
-        "outputId": "2a0c53b4-ff18-4d83-b59e-4ebd4cabc9f2"
+        "outputId": "568c46f5-e162-4097-c28d-7817398eee97"
       },
       "source": [
         "for i in range(2,7,2):\n",
         "  print(i)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1957,13 +1962,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PhLPXT6oOYby",
-        "outputId": "011d9bc6-c697-4bee-a2b2-c221c382f4bd"
+        "outputId": "9bcea9ea-54c3-4c7e-a987-b0e1eda58d67"
       },
       "source": [
         "for i in range(5):\n",
         "  print('hahaha')"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1985,7 +1990,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8gMpDmOnOkD0",
-        "outputId": "16ef2bf7-3bb7-4453-f901-2af09055e343"
+        "outputId": "47f89ad3-4273-4231-ebfc-03ecef571436"
       },
       "source": [
         "for i in range(5):\n",
@@ -1993,7 +1998,7 @@
         "  x = i+3\n",
         "  print(f'i={i} x={x}')"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -2029,7 +2034,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ViRsAX_gPOdF",
-        "outputId": "0a90f731-4822-45d6-a839-4f52867a5400"
+        "outputId": "c042622b-cff7-4e4a-d901-8814366db3c3"
       },
       "source": [
         "for i in range(3):\n",
@@ -2039,7 +2044,7 @@
         "        print(f'i = {i} j = {j} i+j = {i+j}')\n",
         "    print('end j loop')"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -2096,10 +2101,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "2xRZrbAgfJV6",
-        "outputId": "914f70ac-bfda-41d2-92f1-ee23b35c7301",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8ed9cf68-46c4-4e07-cc77-e49316536878"
       },
       "source": [
         "stringx = 'sadfasdfsadfweirjwersdfspadofgj'\n",
@@ -2107,7 +2112,7 @@
         "if len(stringx) > 30:\n",
         "    print(f'{stringx} is longer than 30 characters')"
       ],
-      "execution_count": 1,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -2129,7 +2134,7 @@
         "if len(stringx) > 100:\n",
         "    print(f'{stringx} is longer than 30 characters')"
       ],
-      "execution_count": 2,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -2151,10 +2156,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZmNkeAMEfXtd",
-        "outputId": "5d72b75c-e550-49d7-a00f-1ee9f0ea9db2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "694d6409-fddd-4893-d9f7-6fd06f67d4a7"
       },
       "source": [
         "stringx = 'sadfasdfsadfweirjwersdfspadofgj'\n",
@@ -2164,7 +2169,7 @@
         "else:\n",
         "    print(f'{stringx} in {len(stringx)} characters long')"
       ],
-      "execution_count": 3,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -2203,7 +2208,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "842c0952-a86c-43c6-b395-6a6b30b8ab1a"
+        "outputId": "e7cc90b5-b71a-41fd-cf95-a066f2efa020"
       },
       "source": [
         "password = '12345'\n",
@@ -2218,7 +2223,7 @@
         "else:\n",
         "    print('Wrong password, tey again!')"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -2246,7 +2251,7 @@
       "source": [
         "list_ex = [1,5,9,-19,-2,0] #หาค่าน้อยที่สุดใน list_ex โดยไม่ใช้ function min (commit ก่อน 10.30 :Quiz1)"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -2256,12 +2261,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CwRH_E4iN4yp",
-        "outputId": "2d99ee29-a066-44eb-f5de-f73f95ab8000"
+        "outputId": "39ec9869-8e4e-4821-9c5b-9315368a111f"
       },
       "source": [
         "list_ex[-3]"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2273,7 +2278,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 23
         }
       ]
     },
@@ -2284,7 +2289,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "07a488f2-328a-4b03-9ddd-2edf2bed25cc"
+        "outputId": "74ae1fa1-23a5-4397-ea85-f0c33f3cfdd3"
       },
       "source": [
         "min = 10000000  #กำหนดให้มีค่าเยอะๆไว้ก่อน\n",
@@ -2293,7 +2298,7 @@
         "      min = i\n",
         "print(min)"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -2311,7 +2316,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "25bdaf38-5391-4c93-e2f9-ea0f22de3e4d"
+        "outputId": "df80762c-4704-40dc-c756-28b11c9d10bc"
       },
       "source": [
         "min = 10000000  #กำหนดให้มีค่าเยอะๆไว้ก่อน\n",
@@ -2327,7 +2332,7 @@
         "    print('end condition, go to next i')\n",
         "print(min)"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -2380,7 +2385,7 @@
       "source": [
         "score = [49,65,70,95,82,55,89,20,77,77,81,59,10] #ตัดเกรดคะแนนใน list_score (ใช้ if กับ for)"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -2391,17 +2396,17 @@
       "source": [
         "list_score = [49,65,70,95,82,55,89,20,77,77,81,59,10]"
       ],
-      "execution_count": 4,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "MvuPMIkJgJlx",
-        "outputId": "39b1d6c2-911a-42c2-fef8-ce0f2914418f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c3a95382-2ecb-45a7-c830-4ade25d336d3"
       },
       "source": [
         "print(list_score)\n",
@@ -2424,7 +2429,7 @@
         "    elif  i > 80:\n",
         "      print('Grade A')"
       ],
-      "execution_count": 17,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -2467,8 +2472,255 @@
         "id": "xOWggRhCOzsL"
       },
       "source": [
-        "## Function"
+        "## Function\n",
+        "\n",
+        "\n",
+        "\n",
+        "```python\n",
+        "def ชื่อฟังก์ชั่น(input1,input2,...):\n",
+        "    งานxxx\n",
+        "    งานyyy\n",
+        "    return output\n",
+        "```\n",
+        "\n",
+        "ส่วนประกอบสำคัญ\n",
+        "*   input\n",
+        "*   process (ไม่มีไม่ได้)\n",
+        "*   output\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zq-5yvmYy-Z3"
+      },
+      "source": [
+        "Example 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tdgyAA1WxFwr"
+      },
+      "source": [
+        "def grading_list(list_score):\n",
+        "  grade_list = []\n",
+        "\n",
+        "  #print(list_score)\n",
+        "  for i in list_score:\n",
+        "      #print(f'score = {i}')\n",
+        "      if i < 50:\n",
+        "        Grade = 'F'\n",
+        "      elif 50 <= i <= 54:\n",
+        "        Grade = 'D'\n",
+        "      elif 55 <= i <= 59:\n",
+        "        Grade = 'D+'\n",
+        "      elif 60 <= i <= 64:\n",
+        "        Grade = 'C'\n",
+        "      elif 65 <= i <= 69:\n",
+        "        Grade = 'C+'\n",
+        "      elif 70 <= i <= 74:\n",
+        "        Grade = 'B'\n",
+        "      elif 75 <= i <= 79:\n",
+        "        Grade = 'B+'\n",
+        "      elif  i > 80:\n",
+        "        Grade = 'A'\n",
+        "      grade_list.append([score.grade])\n",
+        "  return grade_list"
+      ],
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oZBa2lJn2TM6",
+        "outputId": "6e55e10b-8bec-4211-e498-9e1777025564",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 282
+        }
+      },
+      "source": [
+        "g = grading_list(score)\n",
+        "g"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-45-3ad11220f4e3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgrading_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-44-bf752d8f485e>\u001b[0m in \u001b[0;36mgrading_list\u001b[0;34m(list_score)\u001b[0m\n\u001b[1;32m     21\u001b[0m       \u001b[0;32melif\u001b[0m  \u001b[0mi\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m80\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0mGrade\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'A'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m       \u001b[0mgrade_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrade\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mgrade_list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'grade'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TcyjFQ8z9J-n"
+      },
+      "source": [
+        "Example 2 (ไม่มี input)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_CIQomvt2VV5"
+      },
+      "source": [
+        "def mypi():\n",
+        "    return 3.14"
+      ],
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O5S_zgZv9Ucq",
+        "outputId": "0f9dc48c-9029-4f7e-d409-6fdf5b8ee9d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "r = 10\n",
+        "print(f'รัศมี = {r} จะมีเส้นรอบวง = {2*mypi()*r}')"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "รัศมี = 10 จะมีเส้นรอบวง = 62.800000000000004\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0dQ5BtzN90ux"
+      },
+      "source": [
+        "Example 3 (ไม่มี output)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Gd5LLxyJ9qQf"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y22HlAldGIAY"
+      },
+      "source": [
+        "#### Quiz 4 \n",
+        "สร้างฟังก์ชั่น\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   วาดรูปบ้าน\n",
+        "*   วาดรูปต้นไม้\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HRjQpP7SGUHp"
+      },
+      "source": [
+        "def draw_house():\n",
+        "    print('         /\\          ')\n",
+        "    print('        /  \\         ')\n",
+        "    print('       /    \\        ')\n",
+        "    print('=====================')\n",
+        "    print('|                   |')\n",
+        "    print('|                   |')\n",
+        "    print('|                   |')\n",
+        "    print('=====================')"
+      ],
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tkEdhFZEIQan",
+        "outputId": "82fcb1e4-3e77-4025-f188-fd513b1617f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "draw_house()"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "         /\\          \n",
+            "        /  \\         \n",
+            "       /    \\        \n",
+            "=====================\n",
+            "|                   |\n",
+            "|                   |\n",
+            "|                   |\n",
+            "=====================\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jLl1ufh-IRug"
+      },
+      "source": [
+        "def draw_tree():\n",
+        "    print('     (           )      ')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zLOveE8cIZ2g"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
