--- a/Data_Preprocessing_(Chapter3).ipynb
+++ b/Data_Preprocessing_(Chapter3).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Data Preprocessing (Chapter3).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMbW7fsegKDBs9EaMfdVoEi",
+      "authorship_tag": "ABX9TyMpCO6+kWXGaq1uNdi0lRmw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -51,7 +51,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -70,7 +70,7 @@
       "source": [
         "import os "
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -88,7 +88,7 @@
         "data_cases = pd.read_csv(os.path.join(path, 'confirmed-cases.csv'))\n",
         "data_cases"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,7 +348,7 @@
       "source": [
         "data_cases['risk']"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -388,7 +388,7 @@
       "source": [
         "data_cases['risk'][678]"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -420,7 +420,7 @@
       "source": [
         "data_cases[['age', 'risk', 'sex']]"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -567,7 +567,7 @@
       "source": [
         "data_cases.iloc[678,8]"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -599,7 +599,7 @@
       "source": [
         "data_cases.iloc[-10:,4:9:2]"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -727,7 +727,7 @@
       "source": [
         "data_cases.iloc[-10:,[3,4,8]]"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,7 +855,7 @@
       "source": [
         "data_cases.describe()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -961,7 +961,7 @@
         "from matplotlib import pyplot as plt\n",
         "plt.boxplot(data_cases['age']) #เพราะมีค่า missing จึง plt ไม่ได้"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1023,7 +1023,7 @@
       "source": [
         "data_cases.isnull()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1256,7 +1256,7 @@
       "source": [
         "data_cases.isnull().any()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1305,7 +1305,7 @@
       "source": [
         "plt.boxplot(data_cases['age'].dropna())"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1354,7 +1354,7 @@
       "source": [
         "data_cases.dropna() #ทำให้ข้อมูลหายไปเยอะ"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1587,7 +1587,7 @@
       "source": [
         "data_cases.dropna().shape #หาค่าแถวและหลัก"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1615,7 +1615,7 @@
       "source": [
         "data_cases.dropna().shape[0]"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1648,7 +1648,7 @@
       "source": [
         "removed = data_cases.shape[0] - data_cases.dropna().shape[0]"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1665,7 +1665,7 @@
         "print(f'size after drop = {data_cases.dropna().shape[0]}')\n",
         "print(f'We lost {100*(removed/data_cases.shape[0])}% of data')"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1695,7 +1695,7 @@
       "source": [
         "data_cases_nomissingAge = data_cases.dropna(subset=['age'])"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1711,7 +1711,7 @@
       "source": [
         "plt.boxplot(data_cases['age'].dropna())"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1764,7 +1764,7 @@
       "source": [
         "removed2 = data_cases.shape[0] - data_cases_nomissingAge.shape[0]"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1781,7 +1781,7 @@
         "print(f'size after drop = {data_cases_nomissingAge.shape[0]}')\n",
         "print(f'We lost {100*(removed2/data_cases.shape[0])}% of data')"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1816,7 +1816,7 @@
       "source": [
         "data_cases"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2045,22 +2045,22 @@
       "source": [
         "data_cases[['risk']] = data_cases[['risk']].fillna('ไม่มีข้อมูล')"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "-OzQPcL8UNzp",
-        "outputId": "adbc74a8-039f-46ae-80f5-470bd79d1727",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "adbc74a8-039f-46ae-80f5-470bd79d1727"
       },
       "source": [
         "set(data_cases['risk'])"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2220,15 +2220,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "d9wIcalKUSKM",
-        "outputId": "30bea8da-7a1d-4125-be74-62c59e47fba4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "30bea8da-7a1d-4125-be74-62c59e47fba4"
       },
       "source": [
         "set(data_cases['Unit'])"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2252,22 +2252,22 @@
       "source": [
         "data_cases[['Unit']] = data_cases[['Unit']].fillna('ปี?')"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "LB-ZtG3OJVfl",
-        "outputId": "23e69ff8-b014-408f-b776-cfb08875319e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "23e69ff8-b014-408f-b776-cfb08875319e"
       },
       "source": [
         "data_cases.isnull().any()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2291,6 +2291,49 @@
             "tags": []
           },
           "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AF71Y955ZdUI"
+      },
+      "source": [
+        "Quiz 4 + HW\n",
+        "\n",
+        "1. records ที่ กักตัวที่ขอนแก่น\n",
+        "2. records ที่ กักตัวที่ขอนแก่น + โคราช + อุดร\n",
+        "3. records ที่ เป็นผู้หญิงที่พยเชื่อที่ กทม.\n",
+        "4. records ที่ เป็นผู้ชาย อายุ 18-22 ปี ที่กักตัวที่เชียงใหม่\n",
+        "5. หาอาสุเฉลี่ยของคนที่พบเชื้อในขอนแก่น"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nPCWkOAzZwqm",
+        "outputId": "aa2cefc4-daaa-44a8-eae5-3e733196abfc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 313
+        }
+      },
+      "source": [
+        "data_cases2['province_of_isolation'] == 'ขอนแก่น'"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-a3c445d1cf11>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata_cases2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'province_of_isolation'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'ขอนแก่น'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'data_cases2' is not defined"
+          ]
         }
       ]
     }
